@@ -10,7 +10,8 @@ Changes log
           Reported by Carsten Lohmann.
         - Fixed generation of GET request sent by the internal 
           connector just after a request with an entity.
-
+        - Moved ServletUtils class introduced in RC2 into the 
+          org.restlet.ext.servlet package.
           
 - 2.0 Release Candidate 2 (2010-03-30)
     - API changes
